--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1094,7 +1094,7 @@ audio {
 	text-shadow: 5px 5px 5px #FFF;
 	display: none;
 }
-#b1,#b11 {
+/* #b1,#b11 {
 	background-image: url('b1.png');
 }
 #b2,#b22 {
@@ -1114,7 +1114,7 @@ audio {
 }
 #b7,#b77{
 	background-image: url('b7.png');
-}
+} */
 .balloons-rotate-behaviour-one {
 	-webkit-animation: balloons_rotate_one linear 10s infinite;
 	-webkit-transform: rotate(30deg);
